// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeProject creates a generic NodeJS project 1`] = `
Object {
  "author": Object {
    "email": "test@example.com",
    "name": "Test Example",
    "organization": true,
    "url": undefined,
  },
  "bin": undefined,
  "bugs": undefined,
  "bundledDependencies": Array [
    "@devPackage/latest",
  ],
  "dependencies": Object {
    "@package/latest": "*",
    "@package/version": "^1",
  },
  "description": "MyDescription",
  "devDependencies": Object {
    "@devPackage/latest": "*",
    "@devPackage/version": "^2",
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": Array [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-project",
  "peerDependencies": Object {
    "@peerPackage/latest": "*",
    "@peerPackage/version": "^3",
  },
  "private": true,
  "repository": Object {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": Object {
    "a": "b",
  },
  "scripts": Object {
    "test": "./myTestScript.sh",
  },
  "types": undefined,
  "version": "3.0.11",
}
`;

exports[`NodeProject creates a generic NodeJS project with Eslint 1`] = `
Object {
  "env": Object {
    "jest": false,
    "node": true,
  },
  "extends": Array [
    "plugin:import/recommended",
  ],
  "ignorePatterns": Array [
    "node_modules/",
    "*.generated.ts",
    "coverage",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        ".stackgenrc.ts",
      ],
      "rules": Object {
        "@typescript-eslint/no-require-imports": "off",
        "import/no-extraneous-dependencies": "off",
      },
    },
  ],
  "parser": undefined,
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [],
  "root": true,
  "rules": Object {
    "array-bracket-newline": Array [
      "error",
      "consistent",
    ],
    "array-bracket-spacing": Array [
      "error",
      "never",
    ],
    "brace-style": Array [
      "error",
      "1tbs",
      Object {
        "allowSingleLine": true,
      },
    ],
    "comma-dangle": Array [
      "error",
      "only-multiline",
    ],
    "comma-spacing": Array [
      "error",
      Object {
        "after": true,
        "before": false,
      },
    ],
    "curly": Array [
      "error",
      "multi-line",
      "consistent",
    ],
    "dot-notation": Array [
      "error",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": Array [
          "**/__tests__/**",
          "**/test/**",
        ],
        "optionalDependencies": false,
        "peerDependencies": true,
      },
    ],
    "import/no-unresolved": Array [
      "error",
    ],
    "import/order": Array [
      "warn",
      Object {
        "alphabetize": Object {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": Array [
          "builtin",
          "external",
        ],
      },
    ],
    "key-spacing": Array [
      "error",
    ],
    "keyword-spacing": Array [
      "error",
    ],
    "max-len": Array [
      "error",
      Object {
        "code": 80,
        "ignoreComments": true,
        "ignoreRegExpLiterals": true,
        "ignoreStrings": true,
        "ignoreTemplateLiterals": true,
        "ignoreUrls": true,
      },
    ],
    "no-bitwise": Array [
      "error",
    ],
    "no-duplicate-imports": Array [
      "error",
    ],
    "no-multi-spaces": Array [
      "error",
      Object {
        "ignoreEOLComments": false,
      },
    ],
    "no-multiple-empty-lines": Array [
      "error",
    ],
    "no-return-await": Array [
      "off",
    ],
    "no-shadow": Array [
      "off",
    ],
    "no-trailing-spaces": Array [
      "error",
    ],
    "object-curly-newline": Array [
      "error",
      Object {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": Array [
      "error",
      "always",
    ],
    "object-property-newline": Array [
      "error",
      Object {
        "allowAllPropertiesOnSameLine": true,
      },
    ],
    "quote-props": Array [
      "error",
      "consistent-as-needed",
    ],
    "quotes": Array [
      "error",
      "double",
      Object {
        "avoidEscape": true,
      },
    ],
    "semi": Array [
      "error",
      "always",
    ],
    "space-before-blocks": Array [
      "error",
    ],
  },
  "settings": Object {
    "import/parsers": Object {
      "@typescript-eslint/parser": Array [
        ".ts",
        ".tsx",
      ],
    },
    "import/resolver": Object {
      "alias": Object {},
      "node": Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
      },
      "typescript": undefined,
    },
  },
}
`;

exports[`NodeProject creates a generic NodeJS project with Eslint, Jest, and Typescript 1`] = `
Object {
  "clearMocks": true,
  "collectCoverage": true,
  "coverageDirectory": "coverage",
  "coveragePathIgnorePatterns": Array [
    "node_modules",
  ],
  "coverageReporters": Array [
    "json",
    "text",
  ],
  "globals": Object {
    "ts-jest": Object {
      "tsconfig": "tsconfig.json",
    },
  },
  "modulePathIgnorePatterns": Array [
    "node_modules",
  ],
  "preset": "ts-jest",
  "reporters": Array [
    "default",
    Array [
      "jest-junit",
      Object {
        "outputDirectory": "test-reports",
        "outputName": undefined,
      },
    ],
  ],
  "snapshotResolver": undefined,
  "testMatch": Array [
    "**/__tests__/?(*.)+(spec|test).[tj]s?(x)",
    "**/__tests__/**/?(*.)+(spec|test).[tj]s?(x)",
    "**/?(*.)+(spec|test).[tj]s?(x)",
  ],
  "testPathIgnorePatterns": Array [
    "node_modules",
  ],
  "watchPathIgnorePatterns": Array [
    "node_modules",
  ],
}
`;

exports[`NodeProject creates a generic NodeJS project with Eslint, Jest, and Typescript 2`] = `
Object {
  "env": Object {
    "jest": true,
    "node": true,
  },
  "extends": Array [
    "plugin:import/recommended",
    "plugin:import/typescript",
  ],
  "ignorePatterns": Array [
    "node_modules/",
    "*.generated.ts",
    "coverage",
    "*.js",
    "*.d.ts",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        ".stackgenrc.ts",
      ],
      "rules": Object {
        "@typescript-eslint/no-require-imports": "off",
        "import/no-extraneous-dependencies": "off",
      },
    },
  ],
  "parser": "@typescript-eslint/parser",
  "parserOptions": Object {
    "ecmaVersion": 2020,
    "project": "./tsconfig.json",
    "sourceType": "module",
  },
  "plugins": Array [
    "@typescript-eslint",
  ],
  "root": true,
  "rules": Object {
    "@typescript-eslint/member-delimiter-style": Array [
      "error",
    ],
    "@typescript-eslint/member-ordering": Array [
      "error",
      Object {
        "default": Array [
          "public-static-field",
          "public-static-method",
          "protected-static-field",
          "protected-static-method",
          "private-static-field",
          "private-static-method",
          "field",
          "constructor",
          "method",
        ],
      },
    ],
    "@typescript-eslint/no-floating-promises": Array [
      "error",
    ],
    "@typescript-eslint/no-require-imports": Array [
      "error",
    ],
    "@typescript-eslint/no-shadow": Array [
      "error",
    ],
    "@typescript-eslint/return-await": Array [
      "error",
    ],
    "array-bracket-newline": Array [
      "error",
      "consistent",
    ],
    "array-bracket-spacing": Array [
      "error",
      "never",
    ],
    "brace-style": Array [
      "error",
      "1tbs",
      Object {
        "allowSingleLine": true,
      },
    ],
    "comma-dangle": Array [
      "error",
      "only-multiline",
    ],
    "comma-spacing": Array [
      "error",
      Object {
        "after": true,
        "before": false,
      },
    ],
    "curly": Array [
      "error",
      "multi-line",
      "consistent",
    ],
    "dot-notation": Array [
      "error",
    ],
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": Array [
          "**/__tests__/**",
          "**/test/**",
        ],
        "optionalDependencies": false,
        "peerDependencies": true,
      },
    ],
    "import/no-unresolved": Array [
      "error",
    ],
    "import/order": Array [
      "warn",
      Object {
        "alphabetize": Object {
          "caseInsensitive": true,
          "order": "asc",
        },
        "groups": Array [
          "builtin",
          "external",
        ],
      },
    ],
    "indent": Array [
      "off",
    ],
    "key-spacing": Array [
      "error",
    ],
    "keyword-spacing": Array [
      "error",
    ],
    "max-len": Array [
      "error",
      Object {
        "code": 80,
        "ignoreComments": true,
        "ignoreRegExpLiterals": true,
        "ignoreStrings": true,
        "ignoreTemplateLiterals": true,
        "ignoreUrls": true,
      },
    ],
    "no-bitwise": Array [
      "error",
    ],
    "no-duplicate-imports": Array [
      "error",
    ],
    "no-multi-spaces": Array [
      "error",
      Object {
        "ignoreEOLComments": false,
      },
    ],
    "no-multiple-empty-lines": Array [
      "error",
    ],
    "no-return-await": Array [
      "off",
    ],
    "no-shadow": Array [
      "off",
    ],
    "no-trailing-spaces": Array [
      "error",
    ],
    "object-curly-newline": Array [
      "error",
      Object {
        "consistent": true,
        "multiline": true,
      },
    ],
    "object-curly-spacing": Array [
      "error",
      "always",
    ],
    "object-property-newline": Array [
      "error",
      Object {
        "allowAllPropertiesOnSameLine": true,
      },
    ],
    "quote-props": Array [
      "error",
      "consistent-as-needed",
    ],
    "quotes": Array [
      "error",
      "double",
      Object {
        "avoidEscape": true,
      },
    ],
    "semi": Array [
      "error",
      "always",
    ],
    "space-before-blocks": Array [
      "error",
    ],
  },
  "settings": Object {
    "import/parsers": Object {
      "@typescript-eslint/parser": Array [
        ".ts",
        ".tsx",
      ],
    },
    "import/resolver": Object {
      "alias": Object {},
      "node": Object {
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
      },
      "typescript": Object {
        "alwaysTryTypes": true,
        "project": "tsconfig.json",
      },
    },
  },
}
`;

exports[`NodeProject creates a generic NodeJS project with Eslint, Jest, and Typescript 3`] = `
Object {
  "compilerOptions": Object {
    "alwaysStrict": true,
    "declaration": true,
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "inlineSourceMap": true,
    "inlineSources": true,
    "lib": Array [
      "esnext",
    ],
    "module": "commonjs",
    "noEmit": false,
    "noEmitOnError": false,
    "noFallthroughCasesInSwitch": true,
    "noImplicitAny": true,
    "noImplicitReturns": true,
    "noImplicitThis": true,
    "noUnusedLocals": true,
    "noUnusedParameters": false,
    "outDir": "build",
    "resolveJsonModule": true,
    "strict": true,
    "strictNullChecks": true,
    "strictPropertyInitialization": true,
    "stripInternal": true,
    "target": "ES6",
  },
  "exclude": Array [
    "node_modules",
  ],
  "include": Array [
    "src/*.ts",
    "src/**/*.ts",
  ],
}
`;

exports[`NodeProject creates a generic NodeJS project with Jest 1`] = `
Object {
  "clearMocks": true,
  "collectCoverage": true,
  "coverageDirectory": "coverage",
  "coveragePathIgnorePatterns": Array [
    "node_modules",
  ],
  "coverageReporters": Array [
    "json",
    "text",
  ],
  "modulePathIgnorePatterns": Array [
    "node_modules",
  ],
  "reporters": Array [
    "default",
    Array [
      "jest-junit",
      Object {
        "outputDirectory": "test-reports",
        "outputName": undefined,
      },
    ],
  ],
  "snapshotResolver": undefined,
  "testMatch": Array [
    "**/__tests__/?(*.)+(spec|test).[tj]s?(x)",
    "**/__tests__/**/?(*.)+(spec|test).[tj]s?(x)",
    "**/?(*.)+(spec|test).[tj]s?(x)",
  ],
  "testPathIgnorePatterns": Array [
    "node_modules",
  ],
  "watchPathIgnorePatterns": Array [
    "node_modules",
  ],
}
`;

exports[`NodeProject creates a generic NodeJS project with Typescript 1`] = `
Object {
  "compilerOptions": Object {
    "alwaysStrict": true,
    "declaration": true,
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "inlineSourceMap": true,
    "inlineSources": true,
    "lib": Array [
      "esnext",
    ],
    "module": "commonjs",
    "noEmit": false,
    "noEmitOnError": false,
    "noFallthroughCasesInSwitch": true,
    "noImplicitAny": true,
    "noImplicitReturns": true,
    "noImplicitThis": true,
    "noUnusedLocals": true,
    "noUnusedParameters": false,
    "outDir": "build",
    "resolveJsonModule": true,
    "strict": true,
    "strictNullChecks": true,
    "strictPropertyInitialization": true,
    "stripInternal": true,
    "target": "ES6",
  },
  "exclude": Array [
    "node_modules",
  ],
  "include": Array [
    "src/*.ts",
    "src/**/*.ts",
  ],
}
`;

exports[`NodeProject creates a generic NodeJS project with Yalc 1`] = `
Object {
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "devDependencies": Object {
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": Array [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-project",
  "private": true,
  "repository": Object {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": Object {
    "a": "b",
  },
  "scripts": Object {
    "yalc": "npx yalc publish",
  },
  "types": undefined,
  "version": "3.0.11",
}
`;

exports[`NodeProject creates a generic NodeJS project with a license 1`] = `
Object {
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "devDependencies": Object {
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": Array [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "license": "Apache-2.0",
  "main": "build/index.js",
  "man": undefined,
  "name": "my-project",
  "private": true,
  "repository": Object {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": Object {
    "a": "b",
  },
  "scripts": Object {
    "yalc": "npx yalc publish",
  },
  "types": undefined,
  "version": "3.0.11",
}
`;

exports[`NodeProject creates a generic NodeJS project with overloaded packageName 1`] = `
Object {
  "bin": undefined,
  "bugs": undefined,
  "description": "MyDescription",
  "devDependencies": Object {
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
  },
  "files": Array [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "@example/test",
  "private": true,
  "repository": Object {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": Object {
    "a": "b",
  },
  "scripts": Object {
    "yalc": "npx yalc publish",
  },
  "types": undefined,
  "version": "3.0.11",
}
`;
